step-5-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment-name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-name
  template:
    metadata:
      labels:
        app: simple-name
    spec:
      containers:
      - image: hellozin/simple:v1
        name: simple-server-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment-age
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-age
  template:
    metadata:
      labels:
        app: simple-age
    spec:
      containers:
      - image: hellozin/simple:v1
        name: simple-server-age
