step-5-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service-name
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: simple-name
---
apiVersion: v1
kind: Service
metadata:
  name: simple-service-age
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: simple-age
